style.css
/* ======
BOX RESET 
========= */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* ============
DESIGN TOKENS ↓
=============== */
:root {
  /* COLOR PALETTE */
  --clr-yellow: hsl(47, 88%, 63%);
  --clr-white: hsl(0, 0%, 100%);
  --clr-gray950: hsl(0, 0%, 7%);
  --clr-gray500: hsl(0, 0%, 42%);
  --clr-blue-attribution: hsl(228, 45%, 44%);

  /* FONT FAMILIES */
  --ff-general: "Figtree", sans-serif;

  /* FONT SIZES */
  --fs-attribution: 0.6875rem;
  --fs-big: 1.5rem; /* 24px */
  --fs-medium: 1rem; /* 16px */
  --fs-small: 0.875rem; /* 14px */

  /* FONT WEIGHTS */
  --fw-bold: 800;
  --fw-regular: 500;

  /* LINE HEIGHT */
  --lh-general: 1.5; /* unitless to ensure optimal Text Scaling */

  /* SPACING */
  --sp-50: 0.25rem; /* 4px */
  --sp-100: 0.5rem; /* 8px */
  --sp-150: 0.75rem; /* 12px */
  --sp-300: 1.5rem; /* 24px */
  --sp-400: 2rem; /* 32px */

  /* CARD WIDTH */
  --crd-width: clamp(19rem, 90vw, 24rem); /* 304-384px 90% viewport width */

  /* BORDER RADIUS */
  --br-big: 1.25rem; /* 20px */
  --br-small: 0.625rem; /* 10px */
  --br-2x-small: 0.25rem; /* 4px */

  /* BORDER */
  --bd-general: 1px solid var(--clr-gray500);

  /* BOX SHADOW */
  --bs-general: 0.5rem 0.5rem var(--clr-gray950);
}

@font-face {
  font-family: "Figtree";
  src: url(assets/fonts/static/Figtree-ExtraBold.ttf);
  font-display: swap;
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Figtree";
  src: url(assets/fonts/static/Figtree-Medium.ttf);
  font-display: swap;
  font-weight: 500;
  font-style: normal;
}

/* ============
DESIGN TOKENS ↑
=============== */

/* ================
BLOG ENTRY DESIGN ↓
=================== */
.attribution {
  font-size: var(--fs-attribution);
  text-align: center;
  margin-top: var(--sp-300);
}

.attribution a {
  color: var(--clr-blue-attribution);
}

body {
  background-color: var(--clr-yellow);
  font-family: var(--ff-general);
  line-height: var(--lh-general);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.blog-card {
  width: var(--crd-width);
  background-color: var(--clr-white);
  padding: var(--sp-300);
  border-radius: var(--br-big);
  border: var(--bd-general);
  box-shadow: var(--bs-general);
}

.blog-card__illustration {
  width: 100%;
  display: block; /* eliminates descenders space */
  height: auto;
  border-radius: var(--br-small);
}

.blog-card__header {
  margin-top: var(--sp-300);
}

.blog-card__tag {
  background-color: var(--clr-yellow);
  padding: var(--sp-50) var(--sp-150);
  border-radius: var(--br-2x-small);
  font-weight: var(--fw-bold);
  font-size: var(--fs-small);
  color: var(--clr-gray950);
}

.blog-card__date {
  display: block;
  margin-top: var(--sp-100);
  font-size: var(--fs-small);
  color: var(--clr-gray950);
}

.blog-card__link {
  display: block;
  color: var(--clr-gray950);
  text-decoration: none;
  font-size: var(--fs-big);
  margin: var(--sp-150) 0;
  transition: color 0.3s ease; /* mouse interaction, leaving the link area */
}

/* ===========
ACTIVE STATE ↓
============== */
.blog-card__link:hover,
.blog-card__link:focus-visible {
  color: var(--clr-yellow);
}

.blog-card__link:focus-visible {
  background-color: var(--clr-gray950);
  text-decoration: underline;
}

.attribution a:focus-visible {
  color: var(--clr-yellow);
  background-color: var(--clr-gray950);
  font-weight: var(--fw-bold);
}
/* ===========
ACTIVE STATE ↑
============== */

.blog-card__description {
  color: var(--clr-gray500);
  font-size: var(--fs-medium);
  display: block;
  margin-bottom: var(--sp-300);
}

.blog-card__creator {
  display: inline-flex;
  align-items: center;
  gap: var(--sp-150);
  font-size: var(--fs-small);
  font-weight: var(--fw-bold);
}

.blog-card__creator-img {
  width: var(--sp-400);
}
/* ================
BLOG ENTRY DESIGN ↑
=================== */

